# remnawave-shopbot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  simple_collect.py  simple_monitor_test.py
src/shop_bot/: __main__.py  bot_controller.py  config.py  support_bot_controller.py
src/shop_bot/bot/: admin_handlers.py  handlers.py  keyboards.py  middlewares.py
src/shop_bot/data_manager/: backup_manager.py  database.py  remnawave_repository.py  resource_monitor.py  scheduler.py  speedtest_runner.py
src/shop_bot/modules/: remnawave_api.py
src/shop_bot/support_bot/: handlers.py
src/shop_bot/webhook_server/: app.py
src/shop_bot/webhook_server/static/css/: style.css
src/shop_bot/webhook_server/static/js/: script.js
src/shop_bot/webhook_server/templates/: admin_keys.html  base.html  button_constructor.html  dashboard.html  login.html  monitor.html  settings.html  users.html
src/shop_bot/webhook_server/templates/partials/: admin_keys_table.html  user_keys_table.html  users_table.html
